<resources>
    <string name="app_name">StarBall24</string>
    <string name="match">Match</string>
    <string name="standing">Standing</string>
    <string name="home">Home</string>
    <string name="prediction">Prediction</string>
    <string name="Result">Result</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_1">1</string>
    <string name="manchester_united">Manchester United</string>
    <string name="_38">38</string>
    <string name="_91">91</string>
    <string name="img_logo_club">img_logo_club</string>
    <string name="premier_league">England Premier League</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="vs">VS</string>
    <string name="slogan">Precision Prediction,
        Unrivaled Insight</string>
    <string name="today_fixtures">Today Fixtures</string>
    <string name="powered_by">Powered By</string>
    <string name="l">L</string>
    <string name="p">P</string>
    <string name="d">D</string>
    <string name="w">W</string>
    <string name="pl">PL</string>
    <string name="club_name">Club Name</string>
    <string name="rank">Rank</string>
    <string name="predict">Predict</string>
    <string name="result_fixtures">Result Fixtures</string>
    <string name="hometeam_win">HomeTeam Win</string>
    <string name="statistic">Statistic</string>
</resources>