<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/card_view">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="#F6FAE9"
            android:layout_gravity="center_vertical"
            >
            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:id="@+id/rank_num"
                android:text="@string/_1"
                android:textSize="18sp"
                android:layout_margin="10dp"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
            <ImageView
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:id="@+id/logo_club"
                android:contentDescription="@string/img_logo_club"
                android:src="@drawable/ic_mu_foreground"
                android:layout_gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/rank_num"
                android:layout_marginStart="7dp"
                />
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/manchester_united"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:id="@+id/club_name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/logo_club"
                android:layout_marginStart="7dp"
                />
            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:id="@+id/pl_num"
                android:textAlignment="center"
                android:text="@string/_38"
                android:textSize="12sp"
                android:layout_gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/w_num"
                android:layout_marginEnd="7dp"
                />
            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:id="@+id/w_num"
                android:text="@string/_38"
                android:textSize="12sp"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/D_num"
                android:layout_marginEnd="7dp"
                />
            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:id="@+id/D_num"
                android:text="@string/_38"
                android:textAlignment="center"
                android:textSize="12sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/L_num"
                android:layout_marginEnd="7dp"
                />
            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:id="@+id/L_num"
                android:text="@string/_38"
                android:textAlignment="center"
                android:textSize="12sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/pts_num"
                android:layout_marginEnd="7dp"
                />
            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:id="@+id/pts_num"
                android:text="@string/_91"
                android:textAlignment="center"
                android:textSize="12sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="14dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>